# AoC2018

./: .gitmodules  CMakeLists.txt  main.cpp
solvers/: CMakeLists.txt  day1.cpp  day1.h  day1.puzzle1.cpp  day1.puzzle1.h  day11.cpp  day11.h  day12.cpp  day12.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  day9.cpp  day9.h
tests/: CMakeLists.txt  day1.test.cpp  day11.test.cpp  day12.test.cpp  day2.test.cpp  day3.test.cpp  day4.test.cpp  day5.test.cpp  day6.test.cpp  day7.test.cpp  day8.test.cpp  day9.test.cpp
